@startuml
'https://plantuml.com/class-diagram

Menu --> Piece : manipulates
Menu --> Grid : manipulates
Menu --> PointCounter : manipulates
Painter --> Piece: displays
Painter --> Grid: displays
Painter --> PointCounter: displays
Painter --> Menu: actions
MusicPlayer --> Menu: actions
MusicPlayer --> Piece: displays
MusicPlayer --> Grid: displays
MusicPlayer --> PointCounter: displays
Menu --> Painter: renders
Menu --> MusicPlayer: renders

Abstract Piece {
    -  forms: List
    -  rotation: int
    -  x: int
    -  y: int
    -  color: String
    -  height: int
    + getX()
    + getY()
    + getColor()
    + getHeight()
    + getRotation()
    + getForm()
    + setRotation()
    + setForms()
    + setColor()
    + setHeight()
    + setX()
    + setY()
    + rotate()
    + checkIfFits()
    + deRotate()
    + checkRight()
    + checkLeft()
    + checkUnder()
    + moveDown()
    + moveUp()
    + moveRight()
    + moveLeft()
}

class Grid {
    - matrix: List
    - width: int
    - height: int
    - x: int
    - y: int
    - blockSize: int
    - blankLine: List
    - defaultGridColor: String
    + Grid()
    + creatMatrix()
    + creatMatrixPiece()
    + getHeight()
    + getWidth()
    + getX()
    + getY()
    + getBlockSize()
    + getMatrix()
    + setMatrix()
    + isValid()
    + addPiece()
    + removeLines()
    + verifyLine()
    + removeLine()
}

class Painter {
    - board: TextGraphics
    + paintGrid()
    + paintGridList()
    + paintPiece()
    + paintText()

}

class PointCounter {
    - points: int
    - level: int
    - clearedLines: int
    - inCombo: boolean
    + PointCounter()
    + getPoints()
    + getLevel()
    + setPoints()
    + processLines()
    + processLevel()
    + getLevelTimer()

}

class MusicPlayer {
    - backgroundMusic:Clip
    - dropPieceSound:Clip
    - in: AudioInputStream
    + MusicPlayer()
    + loadMusic()
    + loadDropSound()
    + pieceDropped()
    + startMusic()

}

class Menu {
- painter: Painter
- screen: Terminal screen
- inputOptions: String
+ Menu()
+ run()
+ printMenu()
+ getGraphicMatrix()
+ getMatrixFromColors()
+ checkForInput()
+ readInput()
}

@enduml